# comfyui-feroccustomnodes

./: .gitignore  README.md  __init__.py  config.py  conftest.py  feroc_node.py  file_utils.py  gemini.md  load_description_node.py  pyproject.toml  random_line_from_text_node.py  text_template_node.py
.github/workflows/: publish.yml
tests/: test_feroc_node.py  test_file_utils.py  test_load_description_node.py  test_random_line_from_text_node.py  test_text_template_node.py
